Fixes to improve views on smaller width devices. Added placeholder banners for them, too.

--- a/app/resources/css/main.css
+++ b/app/resources/css/main.css
@@ -2428,6 +2428,18 @@ div.navbar .navbar-collapse {float:left}
     color: #fff;
     text-decoration: underline;
 }
+} @media only screen and (max-width:1222px) {
+.slider_primary {
+	background: url(/images/banner-1200x600.jpg) no-repeat;
+}
+.slider_secondary {
+	display: none;
+}
+.catalog_list {
+    margin: 0 0 -25px;
+    text-align: center;
+}
+
 }@media only screen and (max-width:992px) {
     .main {
     padding: 0;
@@ -2524,6 +2536,9 @@ footer {
     .main {
     min-width: 640px;
 }
+.slider_primary {
+	background: url(/images/banner-768x500.jpg) no-repeat;
+}
 .inner {
     width: 640px;
 }
@@ -2598,7 +2613,6 @@ footer {
     display: none;
 }
 .games_wrap {
-    white-space: nowrap;
     overflow: hidden;
 }
 .games_wrap .left_col {
@@ -2616,10 +2630,6 @@ footer {
     white-space: normal;
 }
 .games_filter {
-    text-align: center;
-}
-.catalog_list {
-    margin: 0 0 -25px;
     text-align: center;
 }
 .catalog_list_item {
